# cld-net-rogue

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  clean-ext.sh  clean.sh  docker-build.sh  install.sh  package.sh  setup.sh
client/: CMakeLists.txt  config.yaml.sample  keys.yaml.sample
client/imgui/: imgui-sfml.cpp
client/src/: AsioNetworkClient.cpp  AsioNetworkClient.hpp  ClientConfig.cpp  ClientConfig.hpp  main.cpp  static.cpp  static.hpp
client/src/scenes/: JoinScene.cpp  JoinScene.hpp  MenuScene.cpp  MenuScene.hpp  PlayScene.cpp  PlayScene.hpp
client/src/util/: Director.cpp  Director.hpp  Scene.hpp
cmake/: ProtobufTools.cmake
ext/include/aws/core/: SDKConfig.h
ext/include/aws/gamelift/common/: GameLiftErrors.h  Outcome.h
ext/include/aws/gamelift/internal/: GameLiftServerState.h
ext/include/aws/gamelift/internal/modelmapper/: DescribePlayerSessionsMapper.h
ext/include/aws/gamelift/internal/network/: AuxProxyMessageHandler.h  AuxProxyMessageSender.h  Network.h
ext/include/aws/gamelift/server/: GameLiftServerAPI.h  LogParameters.h  ProcessParameters.h
ext/include/aws/gamelift/server/model/: DescribePlayerSessionsRequest.h  DescribePlayerSessionsResult.h  GameProperty.h  GameSession.h  GameSessionStatus.h  PlayerSession.h
ext/include/rltk/: layer_t.hpp
ext/lib/: libprotobuf.la  libprotoc.la
scripts/: clean-ext.sh  clean.sh  create-fleet.sh  package.sh  setup-vm.sh  setup.sh
server/: CMakeLists.txt
server/src/: ClientHandler.cpp  ClientHandler.hpp  ClientManager.cpp  ClientManager.hpp  Config.hpp  GameLiftManager.cpp  GameLiftManager.hpp  PacketHandler.cpp  PacketHandler.hpp  main.cpp
server/src/world/: Entity.cpp  Entity.hpp  Handler.cpp  Handler.hpp  Level.cpp  Level.hpp  World.cpp  World.hpp
shared/: game.proto
shared/data/: index.yaml
shared/data/dungeons/: tower.yaml
shared/data/levels/: tower_l1.yaml
shared/src/: PacketData.cpp  PacketData.hpp  PacketDispatcher.cpp  PacketDispatcher.hpp  bintools.cpp  bintools.hpp
shared/src/data/: Dungeon.cpp  Dungeon.hpp  Level.cpp  Level.hpp  Loader.cpp  Loader.hpp
